# website

./: .gitignore  .ninja_log  Dockerfile  LICENCE  Makefile  README.md  README.rst  docker-compose.yml  pelicanconf.py  publishconf.py  pyproject.toml  requirements.pip  setup.cfg  www.toml
content/: debian-lts-rant.rst  opencv-camera-websockets.rst  review-rage-2.rst  review-the-outer-worlds.rst  tasker-google-play-music-for-car.rst  this-site.rst
content/blog/: 2021-in-review.rst  2022-in-review.rst  bitwarden-rs-without-docker.rst  communicating-between-distributed-services.rst  debian-lts-rant.rst  fighting-frameworks.rst  flag-voting.rst  futurama-season-8-sucks.rst  homebuilt-nas-issues.rst  macbook-reuse.rst  multapplied-project-management-history.rst  new-phone-rant.rst  nginx-conf-file-management.rst  nim-javascript.rst  opencv-camera-websockets.rst  optimization-and-breaking-things.rst  platform-teams.rst  project-management-history.rst  replacing-nvidia-shield-launcher.rst  slowly-responding-to-all-web-requests.rst  stop-using-toggles.rst  summary.rst  tasker-google-play-music-for-car.rst  this-site.rst  traefik-docker-systemd-v2.rst  traefik-docker-systemd.rst  unit-testing.rst  vpn-part-1.rst  vpn-part-2.rst  vpn.rst
content/game-reviews/: borderlands-3.rst  cassette-beasts.rst  diablo-4.rst  doom-eternal.rst  halo-infinite-campaign.rst  (+7 more)
fucko/: __init__.py  __main__.py  ansi.py  cfg.py  fucko-fwd.c  logging.py  net.py  rstext.py  rsthacks.py  rstutil.py
pelext/: __init__.py  rst.py
templates/: base.html  index.html  post.html
theme/: style.sass
(+61 files in other folders)
