[metadata]
name = fucko
version = 0.0.1

[options]
packages = find:
# package_dir = =src
install_requires =
    toml
    docutils
    mako
    python-dateutil
    MarkupSafe
    feedgen
    pygments
    ninja_syntax
    inotify_simple

[options.entry_points]
console_scripts =
    fucko = fucko.__main__:main
